# ANSCENTER-RT

./: .gitignore  CMakeLists.txt  README.md
executable/: ovida-rt.lib
src/: Buffer.h  CMakeLists.txt  CameraConnectDialog.cpp  CameraConnectDialog.h  CameraConnectDialog.ui  CameraView.cpp  CameraView.h  CaptureThread.cpp  CaptureThread.h  Config.h  Config.h.cmake  FaceDetect.h  FrameLabel.cpp  FrameLabel.h  ImageProcessingSettingsDialog.cpp  ImageProcessingSettingsDialog.h  ImageProcessingSettingsDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MatToQImage.cpp  MatToQImage.h  ProcessingThread.cpp  ProcessingThread.h  SharedImageBuffer.cpp  SharedImageBuffer.h  Structures.h  main.cpp
src/Plugins/Inference/: CMakeLists.txt
src/Plugins/Inference/include/: inference_trt.h
src/Plugins/Inference/lib/: inferencetrt.lib
src/Plugins/Inference/libtensorrt/: CMakeLists.txt
src/Plugins/Inference/libtensorrt/lib/: tensorrt_cpp_api.lib
src/Plugins/Inference/libtensorrt/src/: engine.cpp  main.cpp
src/Plugins/Inference/src/: inference_trt.cpp  inference_trt.h
src/Plugins/Tracker/lib/: ocsort.lib
src/Plugins/tracker/: CMakeLists.txt
